--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,11 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <link rel="stylesheet" href="kernel.css">
+        <link rel="stylesheet" href="kernel_client.css">
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-        <script src="kernel.js"></script>
+        <script src="kernel_client.js"></script>
     </head>
     <body>
         <div class="container">
@@ -27,6 +27,11 @@
                             Selected symbol: <span class="label label-default" id="selected_option"></span>
                         </div>
                     </form>
+                </div>
+            </div>
+            <div class="well">
+                <div class="row">
+                    <div id="details"></div>
                 </div>
             </div>
         </div>
